Created style.css and worked on calendar

--- a/subpages/about_us.html
+++ b/subpages/about_us.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>SCHEDULO</title>
-<h1>Siia tuleb info meie kohta</h1>
+  <title>SCHEDULO</title>
+  <h1>Siia tuleb info meie kohta</h1>
 </head>
 <body>
 
 <nav>
   <ul>
     <li>
-      <a href="main.html">Home</a>
+      <a href="index.html">Home</a>
     </li>
   </ul>
 </nav>
