--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>SCHEDULO</title>
-<h1>See on main/homepaige</h1>
+  <title>SCHEDULO</title>
+  <h1>See on main/homepaige</h1>
 </head>
 <body>
 
 <nav>
   <ul>
     <li>
-      <a href="main.html">Home</a>
+      <a href="index.html">Home</a>
     </li>
     <li>
       <a href="to_do_list.html">To-do list</a>
@@ -21,7 +21,7 @@
       <a href="calculator.html">Calculator</a>
     </li>
     <li>
-      <a href="calendar.html">Calendar</a>
+      <a href="subpages/calendar/calendar.html">Calendar</a>
     </li>
     <li>
       <a href="about_us.html">About us</a>
