--- a/subpages/oppimine.html
+++ b/subpages/oppimine.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <title>SCHEDULO</title>
-<h1>Siin on meie kalkulaator.</h1>
+<h1>See leht on mõeldud õppimiseks.</h1>
 </head>
 <body>
 
 <nav>
   <ul>
     <li>
-      <a href="main.html">Home</a>
+      <a href="index.html">Home</a>
     </li>
   </ul>
 </nav>
