Refactor index.html with new structure and content

--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SCHEDULO</title>
-  <h1>See on main/homepaige</h1>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav>
-  <ul>
-    <li>
-      <a href="index.html">Home</a>
-    </li>
-    <li>
-      <a href="to_do_list.html">To-do list</a>
-    </li>
-    <li>
-      <a href="oppimine.html">Õppimine</a>
-    </li>
-    <li>
-      <a href="calculator.html">Calculator</a>
-    </li>
-    <li>
-      <a href="subpages/calendar/calendar.html">Calendar</a>
-    </li>
-    <li>
-      <a href="about_us.html">About us</a>
-    </li>
-  </ul>
-</nav>
+  <header>
+    <h1>Добро пожаловать в SCHEDULO!</h1>
+    <p>Ваш личный помощник для планирования, обучения и организации задач.</p>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="index.html" class="nav-link">Home</a></li>
+      <li><a href="to_do_list.html" class="nav-link">To-do list</a></li>
+      <li><a href="oppimine.html" class="nav-link">Õppimine</a></li>
+      <li><a href="calculator.html" class="nav-link">Calculator</a></li>
+      <li><a href="about_us.html" class="nav-link">About us</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section>
+      <h2>Начните здесь</h2>
+      <p>Выберите одну из вкладок в меню, чтобы перейти к нужной функции сайта.</p>
+    </section>
+  </main>
+
 </body>
 </html>
