--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
   <header>
-    <h1>Добро пожаловать в SCHEDULO!</h1>
-    <p>Ваш личный помощник для планирования, обучения и организации задач.</p>
+    <h1>Welcome to SCHEDULE!</h1>
+    <p>Your personal assistant for planning, learning and organizing tasks.</p>
   </header>
 
   <nav>
@@ -25,8 +25,8 @@
 
   <main>
     <section>
-      <h2>Начните здесь</h2>
-      <p>Выберите одну из вкладок в меню, чтобы перейти к нужной функции сайта.</p>
+      <h2>Start here</h2>
+      <p>Select one of the tabs in the menu to access the desired site feature.</p>
     </section>
   </main>
 
