--- a/index.html
+++ b/index.html
@@ -14,18 +14,16 @@
     <p>Your personal assistant for planning, learning, and organizing tasks.</p>
   </header>
 
-  <nav>
-    <ul class="nav-menu">
-      <li><a href="index.html" class="nav-link">Home</a></li>
+<nav>
+  <ul class="nav-menu">
+    <li><a href="index.html" class="nav-link">Home</a></li>
+    <li><a href="to_do_list.html" class="nav-link">To-do list</a></li>
+    <li><a href="oppimine.html" class="nav-link">Õppimine</a></li>
+    <li><a href="calculator.html" class="nav-link">Calculator</a></li>
+    <li><a href="about_us.html" class="nav-link">About us</a></li>
+  </ul>
+</nav>
 
-      <li class="dropdown">
-        <a href="#" class="nav-link">Funk ▼</a>
-        <ul class="dropdown-content">
-          <li><a href="to_do_list.html">To-do list</a></li>
-          <li><a href="oppimine.html">Õppimine</a></li>
-          <li><a href="calculator.html">Calculator</a></li>
-        </ul>
-      </li>
 
       <li><a href="about_us.html" class="nav-link">About us</a></li>
     </ul>
