Revise navigation and enhance main content
Updated navigation and added feature cards.

--- a/index.html
+++ b/index.html
@@ -14,27 +14,39 @@
     <p>Your personal assistant for planning, learning, and organizing tasks.</p>
   </header>
 
-  <nav>
-    <ul class="nav-menu">
-      <li><a href="index.html" class="nav-link">Home</a></li>
-      <li><a href="to_do_list.html" class="nav-link">To-do list</a></li>
-      <li><a href="oppimine.html" class="nav-link">Õppimine</a></li>
-      <li><a href="calculator.html" class="nav-link">Calculator</a></li>
-      <li><a href="about_us.html" class="nav-link">About us</a></li>
-    </ul>
-  </nav>
+<nav>
+  <ul class="nav-menu">
+    <li><a href="index.html" class="nav-link"><span>Home</span></a></li>
+    <li><a href="to_do_list.html" class="nav-link"><span>To-do list</span></a></li>
+    <li><a href="oppimine.html" class="nav-link"><span>Õppimine</span></a></li>
+    <li><a href="calculator.html" class="nav-link"><span>Calculator</span></a></li>
+    <li><a href="about_us.html" class="nav-link"><span>About us</span></a></li>
+  </ul>
+</nav>
 
+<main>
+  <h2>Start here</h2>
+  <p>Select one of the tabs in the menu to access the desired feature.</p>
 
-      <li><a href="about_us.html" class="nav-link">About us</a></li>
-    </ul>
-  </nav>
+  <div class="features">
+    <div class="card">
+      <h3>Plan your day</h3>
+      <p>Create a task list and keep everything organized easily.</p>
+    </div>
+    <div class="card">
+      <h3>Learn efficiently</h3>
+      <p>Track your study goals and manage your learning progress.</p>
+    </div>
+    <div class="card">
+      <h3>Smart tools</h3>
+      <p>Use the calculator and calendar for productivity.</p>
+    </div>
+  </div>
+</main>
 
-  <main>
-    <section>
-      <h2>Start here</h2>
-      <p>Select one of the tabs in the menu to access the desired site feature.</p>
-    </section>
-  </main>
+<footer>
+  © 2025 SCHEDULO. All rights reserved.
+</footer>
 
 </body>
 </html>
