Added correct links

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <nav>
   <ul class="nav-menu">
     <li><a href="index.html" class="nav-link"><span>Home</span></a></li>
-    <li><a href="to_do_list.html" class="nav-link"><span>To-do list</span></a></li>
-    <li><a href="oppimine.html" class="nav-link"><span>Õppimine</span></a></li>
-    <li><a href="calculator.html" class="nav-link"><span>Calculator</span></a></li>
-    <li><a href="about_us.html" class="nav-link"><span>About us</span></a></li>
+    <li><a href="subpages/to_do_list/to_do_list.html" class="nav-link"><span>To-do list</span></a></li>
+    <li><a href="subpages/study/study.html" class="nav-link"><span>Õppimine</span></a></li>
+    <li><a href="subpages/Calculator/calculator.html" class="nav-link"><span>Calculator</span></a></li>
+    <li><a href="subpages/about_us/about_us.html" class="nav-link"><span>About us</span></a></li>
   </ul>
 </nav>
 
