Started adding calculator function

--- a/subpages/Calculator/calculator.html
+++ b/subpages/Calculator/calculator.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="calculator.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <link rel="stylesheet" href="calculator.css">
   <title>SCHEDULO</title>
   <h1>Siin on meie kalkulaator.</h1>
 </head>
 <body>
+  <div class="button" onclick="showPopup()">CLICK HERE TO OPEN CALCULATOR</div>
 
 <nav>
   <ul>
     <li>
-      <a href="index.html">Home</a>
+      <a href="/../../index.html">Home</a>
     </li>
   </ul>
 </nav>
