--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SCHEDULO</title>
   <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
 
@@ -14,39 +13,47 @@
     <p>Your personal assistant for planning, learning, and organizing tasks.</p>
   </header>
 
-<nav>
-  <ul class="nav-menu">
-    <li><a href="index.html" class="nav-link"><span>Home</span></a></li>
-    <li><a href="subpages/to_do_list/to_do_list.html" class="nav-link"><span>To-do list</span></a></li>
-    <li><a href="subpages/study/study.html" class="nav-link"><span>Õppimine</span></a></li>
-    <li><a href="subpages/Calculator/calculator.html" class="nav-link"><span>Calculator</span></a></li>
-    <li><a href="subpages/about_us/about_us.html" class="nav-link"><span>About us</span></a></li>
-  </ul>
-</nav>
+  <nav>
+    <ul class="nav-menu">
+      <li><a href="index.html" class="nav-link"><span>Home</span></a></li>
+      <li><a href="subpages/to_do_list/to_do_list.html" class="nav-link"><span>To-do list</span></a></li>
+      <li><a href="subpages/study/study.html" class="nav-link"><span>Õppimine</span></a></li>
+      <li><a href="subpages/Calculator/calculator.html" class="nav-link"><span>Calculator</span></a></li>
+      <li><a href="subpages/about_us/about_us.html" class="nav-link"><span>About us</span></a></li>
+    </ul>
+  </nav>
 
-<main>
-  <h2>Start here</h2>
-  <p>Select one of the tabs in the menu to access the desired feature.</p>
+  <main>
+    <h2>Start here</h2>
+    <p>Select one of the tabs in the menu to access the desired feature.</p>
 
-  <div class="features">
-    <div class="card">
-      <h3>Plan your day</h3>
-      <p>Create a task list and keep everything organized easily.</p>
-    </div>
-    <div class="card">
-      <h3>Learn efficiently</h3>
-      <p>Track your study goals and manage your learning progress.</p>
-    </div>
-    <div class="card">
-      <h3>Smart tools</h3>
-      <p>Use the calculator and calendar for productivity.</p>
-    </div>
-  </div>
-</main>
+    <div class="features">
+      <a href="subpages/to_do_list/to_do_list.html" class="card-link">
+        <div class="card">
+          <h3>Plan your day</h3>
+          <p>Create a task list and keep everything organized easily.</p>
+        </div>
+      </a>
 
-<footer>
-  © 2025 SCHEDULO. All rights reserved.
-</footer>
+      <a href="subpages/study/study.html" class="card-link">
+        <div class="card">
+          <h3>Learn efficiently</h3>
+          <p>Track your study goals and manage your learning progress.</p>
+        </div>
+      </a>
+
+      <a href="subpages/Calculator/calculator.html" class="card-link">
+        <div class="card">
+          <h3>Smart tools</h3>
+          <p>Use the calculator and calendar for productivity.</p>
+        </div>
+      </a>
+    </div>
+  </main>
+
+  <footer>
+    © 2025 SCHEDULO. All rights reserved.
+  </footer>
 
 </body>
 </html>
