--- a/subpages/Calculator/popup.html
+++ b/subpages/Calculator/popup.html
@@ -1,44 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <script src="calculator.js" defer></script>
-    <link rel="stylesheet" href="calculator.css">
+  <meta charset="UTF-8">
   <title>Calculator</title>
-  <h2>Schedulo Calculator</h2>
-  <style>
-
-  </style>
+  <link rel="stylesheet" href="calculator.css">
+  <script src="calculator.js" defer></script>
 </head>
 <body>
-
-
   <div class="calculator">
-    <pre class="display" id="display">0</pre>
+    <div class="display" id="display">0</div>
     <div class="buttons">
-      <button onclick="appendToDisplay('(')">(</button>
-      <button onclick="appendToDisplay(')')">)</button>
-      <button onclick="clearLastElement()">DEL</button> 
-      <button onclick="clearDisplay()">C</button>
-      <button onclick="appendToDisplay('7')">7</button>
-      <button onclick="appendToDisplay('8')">8</button>
-      <button onclick="appendToDisplay('9')">9</button>
-      <button onclick="appendToDisplay('/')">/</button>
-      <button onclick="appendToDisplay('4')">4</button>
-      <button onclick="appendToDisplay('5')">5</button>  
-      <button onclick="appendToDisplay('6')">6</button> 
-      <button onclick="appendToDisplay('*')">*</button>
-      <button onclick="appendToDisplay('1')">1</button>
-      <button onclick="appendToDisplay('2')">2</button>
-      <button onclick="appendToDisplay('3')">3</button>
-      <button onclick="appendToDisplay('-')">-</button>
-      <button onclick="appendToDisplay('0')">0</button>
-      <button onclick="appendToDisplay('.')">.</button>
-      <button onclick="calculateResult()">=</button>
-      <button onclick="appendToDisplay('+')">+</button> 
+      <button onclick="appendNumber('7')">7</button>
+      <button onclick="appendNumber('8')">8</button>
+      <button onclick="appendNumber('9')">9</button>
+      <button onclick="setOperation('/')">÷</button>
+
+      <button onclick="appendNumber('4')">4</button>
+      <button onclick="appendNumber('5')">5</button>
+      <button onclick="appendNumber('6')">6</button>
+      <button onclick="setOperation('*')">×</button>
+
+      <button onclick="appendNumber('1')">1</button>
+      <button onclick="appendNumber('2')">2</button>
+      <button onclick="appendNumber('3')">3</button>
+      <button onclick="setOperation('-')">−</button>
+
+      <button onclick="appendNumber('0')">0</button>
+      <button onclick="appendNumber('.')">.</button>
+      <button onclick="calculate()">=</button>
+      <button onclick="setOperation('+')">+</button>
+
+      <button onclick="clearDisplay()" style="grid-column: span 4; background:#007acc; color:white;">C</button>
     </div>
   </div>
-
-  <button onclick="window.close()">Close Calculator</button>
-
 </body>
 </html>
