--- a/subpages/calendar/calendar.html
+++ b/subpages/calendar/calendar.html
@@ -1,72 +1,37 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" href="calendar_style.css">
-  <title>SCHEDULO</title>
-  <h1>Siin on meie kalender.</h1>
-</head>
-
-<body>
-
-<nav>
-  <ul>
-    <li>
-      <a href="../../index.html">Home</a>
-    </li>
-  </ul>
-</nav>
-
-<table>
-  <tr class="weekdays">
-    <th>MONDAY</th>
-    <th>TUESDAY</th>
-    <th>WEDNESDAY</th>
-    <th>THURSDAY</th>
-    <th>FRIDAY</th>
-    <th>SATURDAY</th>
-    <th>SUNDAY</th>
-  </tr>
-  <tr class="days">
-    <td>1</td>
-    <td>2</td>
-    <td>3</td>
-    <td>4</td>
-    <td>5</td>
-    <td>6</td>
-    <td>7</td>
-  </tr>
-  <tr class="days">
-    <td>8</td>
-    <td>9</td>
-    <td>10</td>
-    <td>11</td>
-    <td>12</td>
-    <td>13</td>
-    <td>14</td>
-  </tr>
-  <tr class="days">
-    <td>15</td>
-    <td>16</td>
-    <td>17</td>
-    <td>18</td>
-    <td>19</td>
-    <td>20</td>
-    <td>21</td>
-  </tr>
-  <tr class="days">
-    <td>22</td>
-    <td>23</td>
-    <td>24</td>
-    <td>25</td>
-    <td>26</td>
-    <td>27</td>
-    <td>28</td>
-  </tr>
-  </tr>
-    <tr>
-    <td>29</td>
-    <td>30</td>
-    <td>31</td>
-  </tr>
-</table>
-</body>
+<!-- Coding By CodingNepal - youtube.com/codingnepal -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Dynamic Calendar JavaScript | CodingNepal</title>
+    <link rel="stylesheet" href="calendar_style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Font Link for Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+    <script src="calendar_script.js" defer></script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <p class="current-date"></p>
+        <div class="icons">
+          <span id="prev" class="material-symbols-rounded">chevron_left</span>
+          <span id="next" class="material-symbols-rounded">chevron_right</span>
+        </div>
+      </header>
+      <div class="calendar">
+        <ul class="weeks">
+          <li>Sun</li>
+          <li>Mon</li>
+          <li>Tue</li>
+          <li>Wed</li>
+          <li>Thu</li>
+          <li>Fri</li>
+          <li>Sat</li>
+        </ul>
+        <ul class="days"></ul>
+      </div>
+    </div>
+    
+  </body>
+</html>
