--- a/subpages/about_us/about_us.html
+++ b/subpages/about_us/about_us.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="et">
 <head>
+  <meta charset="UTF-8">
   <title>SCHEDULO</title>
-  <h1>Siia tuleb info meie kohta</h1>
 </head>
 <body>
 
-<nav>
-  <ul>
-    <li>
-      <a href="index.html">Home</a>
-    </li>
-  </ul>
-</nav>
+  <h1>Siia tuleb info meie kohta</h1>
 
-<h3>MEIE TIIM:</br>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+    </ul>
+  </nav>
 
-1. SIIM ILISON</br>
-(PILT)</br>
-2. ARTHUR BERIK</br>
-(PILT)</br>
-3. Andrius Krisciunas</br>
-(PILT)</br>
+  <h3>MEIE TIIM:</h3>
 
+  <p>
+    1. SIIM ILISON<br>
+    (PILT)<br><br>
 
-</h3>
+    2. ARTHUR BERIK<br>
+    (PILT)<br><br>
+
+    3. ANDRIUS KRISCIUNAS<br>
+    (PILT)
+  </p>
 
 </body>
+</html>
