--- a/subpages/study/study.html
+++ b/subpages/study/study.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="et">
 <head>
-<title>SCHEDULO</title>
-<h1>See leht on mõeldud õppimiseks.</h1>
+  <meta charset="UTF-8">
+  <title>SCHEDULO</title>
 </head>
 <body>
 
-<nav>
-  <ul>
-    <li>
-      <a href="../../index.html">Home</a>
-    </li>
-  </ul>
-</nav>
+  <h1>See leht on mõeldud õppimiseks.</h1>
+
+  <nav>
+    <ul>
+      <li><a href="../../index.html">Home</a></li>
+    </ul>
+  </nav>
+
+</body>
+</html>
