--- a/subpages/study/study.html
+++ b/subpages/study/study.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="et">
-<head>
-  <meta charset="UTF-8">
-  <title>SCHEDULO</title>
-</head>
-<body>
-
-  <h1>See leht on mõeldud õppimiseks.</h1>
-
-  <nav>
-    <ul>
-      <li><a href="../../index.html">Home</a></li>
-    </ul>
-  </nav>
-
-</body>
+<html>
+  <head>
+    <title>Notes</title>
+    <link rel="stylesheet" href="study.css" />
+    <script defer src="study.js"></script>
+  </head>
+  <body>
+    <div class="container" id="container">
+      <img src="images/plus.png" onclick="CreateNewNote('')" class="addNote" />
+    </div>
+    <button onclick="AddNote()">Add Note</button>
+    <button onclick="SaveNoteData()">Save Notes</button>
+    <button onclick="DeleteAllNotes()">Delete All Notes</button>
+  </body>
 </html>
+
+
