Finished study function

--- a/subpages/study/study.html
+++ b/subpages/study/study.html
@@ -6,13 +6,10 @@
     <script defer src="study.js"></script>
   </head>
   <body>
-    <div class="container" id="container">
-      <img src="images/plus.png" onclick="CreateNewNote('')" class="addNote" />
-    </div>
+    <h1>Notes</h1>
     <button onclick="AddNote()">Add Note</button>
-    <button onclick="SaveNoteData()">Save Notes</button>
+    <button onclick="SaveNoteData()">Save All Notes</button>
     <button onclick="DeleteAllNotes()">Delete All Notes</button>
+    <div id="container"></div>
   </body>
 </html>
-
-
