--- a/index.html
+++ b/index.html
@@ -26,27 +26,41 @@
 
   <main>
     <h2>Start here</h2>
-    <p>Select one of the tabs in the menu to access the desired feature.</p>
+    <p>Select one of the features below to begin:</p>
 
     <div class="features">
       <a href="subpages/to_do_list/to_do_list.html" class="card-link">
-        <div class="card">
+        <div class="card card-todo">
           <h3>Plan your day</h3>
-          <p>Create a task list and keep everything organized easily.</p>
+          <p>Create a to-do list and organize your schedule easily.</p>
         </div>
       </a>
 
       <a href="subpages/study/study.html" class="card-link">
-        <div class="card">
+        <div class="card card-study">
           <h3>Learn efficiently</h3>
-          <p>Track your study goals and manage your learning progress.</p>
+          <p>Track your study goals and learning progress.</p>
         </div>
       </a>
 
       <a href="subpages/Calculator/calculator.html" class="card-link">
-        <div class="card">
+        <div class="card card-calculator">
           <h3>Smart tools</h3>
-          <p>Use the calculator and calendar for productivity.</p>
+          <p>Use the calculator to boost productivity.</p>
+        </div>
+      </a>
+
+      <a href="subpages/calendar/calendar.html" class="card-link">
+        <div class="card card-calendar">
+          <h3>Stay on schedule</h3>
+          <p>View and manage your upcoming events.</p>
+        </div>
+      </a>
+
+      <a href="subpages/about_us/about_us.html" class="card-link">
+        <div class="card card-about">
+          <h3>About us</h3>
+          <p>Meet the SCHEDULO team and learn more about the project.</p>
         </div>
       </a>
     </div>
