Change card class from 'card-about' to 'card-team'

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </a>
 
       <a href="subpages/about_us/about_us.html" class="card-link">
-        <div class="card card-about">
+        <div class="card card-team">
           <h3>About us</h3>
           <p>Meet the SCHEDULO team and learn more about the project.</p>
         </div>
