--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li><a href="subpages/to_do_list/to_do_list.html" class="nav-link"><span>To-do list</span></a></li>
       <li><a href="subpages/study/study.html" class="nav-link"><span>Õppimine</span></a></li>
       <li><a href="subpages/Calculator/calculator.html" class="nav-link"><span>Calculator</span></a></li>
-      <li><a href="subpages/calendar/calendar.html" class="nav-link"><span>Calendar</span></a></li>
+      <li><a href="subpages/Calculator/popup_calculator.html" class="nav-link"><span>Calculator</span></a></li>
       <li><a href="subpages/about_us/about_us.html" class="nav-link"><span>About us</span></a></li>
     </ul>
   </nav>
