--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <li><a href="subpages/to_do_list/to_do_list.html" class="nav-link"><span>To-do list</span></a></li>
       <li><a href="subpages/study/study.html" class="nav-link"><span>Õppimine</span></a></li>
 
-      <li><a href="subpages/Calculator/popup_calculator.html" class="nav-link"><span>Calculator</span></a></li>
+      <!-- Calculator opens in a new tab -->
+      <li><a href="subpages/Calculator/popup_calculator.html" target="_blank" class="nav-link"><span>Calculator</span></a></li>
 
       <li><a href="subpages/about_us/about_us.html" class="nav-link"><span>About us</span></a></li>
     </ul>
@@ -44,14 +45,16 @@
         </div>
       </a>
 
-      <a href="subpages/Calculator/popup_calculator.html" class="card-link">
+      <!-- Calculator card opens in new tab -->
+      <a href="subpages/Calculator/popup_calculator.html" target="_blank" class="card-link">
         <div class="card card-calculator">
           <h3>Smart tools</h3>
           <p>Use the calculator to boost productivity.</p>
         </div>
       </a>
 
-      <a href="subpages/calendar/calendar.html" class="card-link">
+      <!-- Calendar card opens in new tab -->
+      <a href="subpages/calendar/calendar.html" target="_blank" class="card-link">
         <div class="card card-calendar">
           <h3>Stay on schedule</h3>
           <p>View and manage your upcoming events.</p>
