--- a/subpages/about_us/about_us.html
+++ b/subpages/about_us/about_us.html
@@ -1,31 +1,108 @@
 <!DOCTYPE html>
-<html lang="et">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SCHEDULO</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SCHEDULO – About Us</title>
+
+  <!-- main site styling -->
+  <link rel="stylesheet" href="../../style.css">
+  <!-- page styling -->
+  <link rel="stylesheet" href="about_us.css">
 </head>
 <body>
 
-  <h1>Siia tuleb info meie kohta</h1>
+  <header>
+    <h1>About Schedulo</h1>
+    <p>A small web project by first-year Computer Science students at the University of Tartu.</p>
+  </header>
 
   <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
+    <ul class="nav-menu">
+      <li><a href="../../index.html" class="nav-link"><span>Home</span></a></li>
+      <li><a href="../to_do_list/to_do_list.html" class="nav-link"><span>To-do list</span></a></li>
+      <li><a href="../study/study.html" class="nav-link"><span>Study</span></a></li>
+      <li><a href="../Calculator/calculator.html" class="nav-link"><span>Calculator</span></a></li>
+      <li><a href="../about_us/about_us.html" class="nav-link"><span>About us</span></a></li>
     </ul>
   </nav>
 
-  <h3>MEIE TIIM:</h3>
+  <main>
+    <section class="about-page">
 
-  <p>
-    1. SIIM ILISON<br>
-    (PILT)<br><br>
+      <!-- intro / what -->
+      <article class="about-card">
+        <h2><span class="icon">💡</span> What is Schedulo?</h2>
+        <p>
+          Schedulo is a simple web planner that combines a to-do list, study tools and a few small utilities
+          into one place. It is designed to stay lightweight and easy to use, especially for students.
+        </p>
+      </article>
 
-    2. ARTHUR BERIK<br>
-    (PILT)<br><br>
+      <!-- why -->
+      <article class="about-card">
+        <h2><span class="icon">🎯</span> Why we built it</h2>
+        <p>
+          This project was created for a web development course at the University of Tartu.
+          Our main goal is to practice real web development: writing HTML, CSS and JavaScript,
+          working with GitHub, and keeping our code readable so we can learn from it later.
+        </p>
+      </article>
 
-    3. ANDRIUS KRISCIUNAS<br>
-    (PILT)
-  </p>
+      <!-- tech -->
+      <article class="about-card">
+        <h2><span class="icon">🧰</span> Technologies</h2>
+        <p>Schedulo is built using core front-end technologies:</p>
+        <ul class="bullet-list">
+          <li>HTML – structure of the pages</li>
+          <li>CSS – layout, colours and visual style</li>
+          <li>JavaScript – logic and interactivity</li>
+        </ul>
+      </article>
+
+      <!-- team -->
+      <section class="about-card">
+        <h2><span class="icon">👥</span> Our team</h2>
+        <p>
+          We are first-year Computer Science students at the University of Tartu. Schedulo is one of the projects
+          where we experiment with front-end development and learn how to build and maintain a small web app together.
+        </p>
+
+        <div class="team-grid">
+          <div class="member">
+            <div class="avatar">A</div>
+            <span class="name">Andrius Kriščiūnas</span>
+          </div>
+          <div class="member">
+            <div class="avatar">S</div>
+            <span class="name">Siim Ilison</span>
+          </div>
+          <div class="member">
+            <div class="avatar">A</div>
+            <span class="name">Arthur Berik</span>
+          </div>
+        </div>
+      </section>
+
+      <!-- github -->
+      <section class="about-card github-card">
+        <div class="github-text">
+          <h2><span class="icon">🔗</span> GitHub repository</h2>
+          <p>
+            All source code for Schedulo, including this page, is available on GitHub.
+          </p>
+        </div>
+        <a href="https://github.com/andriusk1/schedulo" target="_blank" class="github-button">
+          View project on GitHub
+        </a>
+      </section>
+
+    </section>
+  </main>
+
+  <footer>
+    © 2025 SCHEDULO. All rights reserved.
+  </footer>
 
 </body>
 </html>
