--- a/subpages/calendar/calendar.html
+++ b/subpages/calendar/calendar.html
@@ -17,7 +17,6 @@
         <div class="icons">
           <span id="prev" class="material-symbols-rounded">chevron_left</span>
           <span id="next" class="material-symbols-rounded">chevron_right</span>
-          <button id="add-event-btn" type="button">Add Event</button>
         </div>
       </header>
       <div class="calendar">
@@ -33,16 +32,40 @@
         <ul class="days"></ul>
       </div>
     </div>
-  <div class="event-panel">
-    <h3 class="event-date-label">No day selected</h3>
+    <div class="event-panel">
+      <div class="event-panel-header">
+        <h2>Events</h2>
+        <p class="event-panel-date" id="selected-date-label">2025-11-21</p>
+      </div>
 
-    <div class="event-form">
-      <input id="event-title" placeholder="Event title" />
-      <textarea id="event-description" placeholder="Event description"></textarea>
+      <ul class="event-list" id="event-list">
+        <li class="event-list-empty">No events for this day.</li>
+      </ul>
+
+      <form class="event-form" id="event-form">
+        <h3 class="event-form-title">Add new event</h3>
+
+        <div class="event-form-group">
+          <label for="event-title">Title</label>
+          <input
+            type="text"
+            id="event-title"
+            placeholder="Event title"
+            autocomplete="off"
+          />
+        </div>
+
+        <div class="event-form-group">
+          <label for="event-desc">Description</label>
+          <textarea
+            id="event-desc"
+            rows="3"
+            placeholder="Short description (optional)"
+          ></textarea>
+        </div>
+
+        <button type="button" id="add-event-btn" class="event-submit-btn">Save event</button>
+      </form>
     </div>
-
-
-    <ul class="event-list"></ul>
-  </div>
   </body>
 </html>
