--- a/subpages/Calculator/popup_calculator.html
+++ b/subpages/Calculator/popup_calculator.html
@@ -30,7 +30,7 @@
       <button onclick="calculate()">=</button>
       <button onclick="setOperation('+')">+</button>
 
-      <button onclick="clearDisplay()" style="grid-column: span 4; background:#007acc; color:white;">C</button>
+      <button onclick="clearDisplay()" class="clear">C</button>
     </div>
   </div>
 </body>
