--- a/subpages/calendar/calendar.html
+++ b/subpages/calendar/calendar.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Dynamic Calendar JavaScript | CodingNepal</title>
     <link rel="stylesheet" href="calendar_style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Font Link for Icons -->
+    <!-- Google Font nooled kalendri jaoks -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <script src="calendar_script.js" defer></script>
   </head>
   <body>
   <div class="calendar-layout">
-    <!-- LEFT: events for selected day -->
     <div class="day-events-panel">
       <div class="event-panel-header">
         <h2>Events</h2>
@@ -23,8 +21,6 @@
         <li class="event-list-empty">No events for this day.</li>
       </ul>
     </div>
-
-    <!-- MIDDLE: calendar (UNCHANGED) -->
     <div class="wrapper">
       <header>
         <p class="current-date"></p>
@@ -46,22 +42,17 @@
         <ul class="days"></ul>
       </div>
     </div>
-
-    <!-- RIGHT: add new event form only -->
     <div class="event-panel">
       <form class="event-form" id="event-form">
         <h3 class="event-form-title">Add new event</h3>
-
         <div class="event-form-group">
           <label for="event-title">Title</label>
           <input
             type="text"
             id="event-title"
             placeholder="Event title"
-            autocomplete="off"
-          />
+            autocomplete="off"/>
         </div>
-
         <div class="event-form-group">
           <label for="event-description">Description</label>
           <textarea
