Replace Calculator link with Calendar link

--- a/subpages/to_do_list/to_do_list.html
+++ b/subpages/to_do_list/to_do_list.html
@@ -21,7 +21,7 @@
       <li><a href="../to_do_list/to_do_list.html" class="nav-link"><span>To-do list</span></a></li>
       <li><a href="../study/study.html" class="nav-link"><span>Õppimine</span></a></li>
       <li><a href="../Calculator/calculator.html" class="nav-link"><span>Calculator</span></a></li>
-      <li><a href="#" onclick="openPopup('subpages/Calculator/popup_calculator.html')" class="nav-link"><span>Calculator</span></a></li>
+      <li><a href="#" onclick="openPopup('subpages/calendar/calendar.html')" class="nav-link"><span>Calendar</span></a></li>
       <li><a href="../about_us/about_us.html" class="nav-link"><span>About us</span></a></li>
     </ul>
   </nav>
