--- a/subpages/calendar/calendar.html
+++ b/subpages/calendar/calendar.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <script src="calendar_script.js" defer></script>
   </head>
+  <script>
+  function openPopup(url) {
+    window.open(
+      url,
+      "popupWindow",
+        "width=420,height=600,resizable=yes,scrollbars=no,status=no"
+    );
+  }
+</script>
+
   <body>
   <div class="calendar-layout">
     <div class="day-events-panel">
