--- a/subpages/calendar/calendar.html
+++ b/subpages/calendar/calendar.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Dynamic Calendar JavaScript | CodingNepal</title>
-    <link rel="stylesheet" href="calendar_style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Font nooled kalendri jaoks -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
-    <script src="calendar_script.js" defer></script>
-  </head>
-  <script>
-  function openPopup(url) {
-    window.open(
-      url,
-      "popupWindow",
-        "width=420,height=600,resizable=yes,scrollbars=no,status=no"
-    );
-  }
-</script>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SCHEDULO – Calendar</title>
 
-  <body>
+  <link rel="stylesheet" href="calendar_style.css">
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded">
+  <script src="calendar_script.js" defer></script>
+
+  <script>
+    function openPopup(url) {
+      window.open(
+        url,
+        "popupWindow",
+        "width=420,height=600,resizable=yes,scrollbars=no,status=no"
+      );
+    }
+  </script>
+</head>
+
+<body>
+
   <div class="calendar-layout">
     <div class="day-events-panel">
       <div class="event-panel-header">
         <h2>Events</h2>
-        <p class="event-panel-date" id="selected-date-label">2025-11-21</p>
+        <p class="event-panel-date" id="selected-date-label">No day selected</p>
       </div>
 
       <ul class="event-list" id="event-list">
         <li class="event-list-empty">No events for this day.</li>
       </ul>
     </div>
+
     <div class="wrapper">
       <header>
         <p class="current-date"></p>
@@ -39,6 +43,7 @@
           <span id="next" class="material-symbols-rounded">chevron_right</span>
         </div>
       </header>
+
       <div class="calendar">
         <ul class="weeks">
           <li>Sun</li>
@@ -52,32 +57,25 @@
         <ul class="days"></ul>
       </div>
     </div>
+
     <div class="event-panel">
       <form class="event-form" id="event-form">
         <h3 class="event-form-title">Add new event</h3>
+
         <div class="event-form-group">
           <label for="event-title">Title</label>
-          <input
-            type="text"
-            id="event-title"
-            placeholder="Event title"
-            autocomplete="off"/>
-        </div>
-        <div class="event-form-group">
-          <label for="event-description">Description</label>
-          <textarea
-            id="event-description"
-            rows="3"
-            placeholder="Short description (optional)"
-          ></textarea>
+          <input type="text" id="event-title" placeholder="Event title" autocomplete="off">
         </div>
 
-        <button type="button" id="add-event-btn" class="event-submit-btn">
-          Save event
-        </button>
+        <div class="event-form-group">
+          <label for="event-description">Description</label>
+          <textarea id="event-description" rows="3" placeholder="Short description (optional)"></textarea>
+        </div>
+
+        <button type="button" id="add-event-btn" class="event-submit-btn">Save event</button>
       </form>
     </div>
   </div>
+
 </body>
-  </body>
 </html>
