--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
   <title>SCHEDULO</title>
   <link rel="stylesheet" href="style.css">
 
-  <!-- Correct popup function -->
   <script>
-    function openPopup(relativePath) {
-      const base = window.location.pathname.replace(/index\.html$/, "");
-      const url = base + relativePath;
+    function openPopup(url) {
       window.open(
         url,
         "popupWindow",
@@ -33,7 +30,6 @@
       <li><a href="subpages/to_do_list/to_do_list.html" class="nav-link"><span>To-do list</span></a></li>
       <li><a href="subpages/study/study.html" class="nav-link"><span>Õppimine</span></a></li>
 
-      <!-- FIXED — removed leading slash -->
       <li><a href="#" onclick="openPopup('subpages/Calculator/popup_calculator.html')" class="nav-link"><span>Calculator</span></a></li>
       <li><a href="#" onclick="openPopup('subpages/calendar/calendar.html')" class="nav-link"><span>Calendar</span></a></li>
 
@@ -60,7 +56,6 @@
         </div>
       </a>
 
-      <!-- FIXED -->
       <a href="#" onclick="openPopup('subpages/Calculator/popup_calculator.html')" class="card-link">
         <div class="card card-calculator">
           <h3>Smart tools</h3>
@@ -68,7 +63,6 @@
         </div>
       </a>
 
-      <!-- FIXED -->
       <a href="#" onclick="openPopup('subpages/calendar/calendar.html')" class="card-link">
         <div class="card card-calendar">
           <h3>Stay on schedule</h3>
