--- a/subpages/to_do_list/to_do_list.html
+++ b/subpages/to_do_list/to_do_list.html
@@ -20,8 +20,13 @@
       <li><a href="../../index.html" class="nav-link"><span>Home</span></a></li>
       <li><a href="../to_do_list/to_do_list.html" class="nav-link"><span>To-do list</span></a></li>
       <li><a href="../study/study.html" class="nav-link"><span>Õppimine</span></a></li>
-      <li><a href="#" onclick="openPopup('subpages/Calculator/popup_calculator.html')" class="nav-link"><span>Calculator</span></a></li>
+
+      <!-- ВАЖНО: путь из подпапки /to_do_list/ к /Calculator/ -->
+      <li><a href="#" onclick="openPopup('../Calculator/popup_calculator.html')" class="nav-link"><span>Calculator</span></a></li>
+
+      <!-- ВАЖНО: путь к календарю из той же папки -->
       <li><a href="#" onclick="openPopup('../calendar/calendar.html')" class="nav-link"><span>Calendar</span></a></li>
+
       <li><a href="../about_us/about_us.html" class="nav-link"><span>About us</span></a></li>
     </ul>
   </nav>
@@ -52,16 +57,16 @@
     © 2025 SCHEDULO. All rights reserved.
   </footer>
 
-<script>
-function openPopup(url) {
-  window.open(
-    url,
-    "popupWindow",
-    "width=420,height=600,resizable=yes,scrollbars=no,status=no"
-  );
-}
-</script>
+  <script>
+    function openPopup(url) {
+      window.open(
+        url,
+        "popupWindow",
+        "width=420,height=600,resizable=yes,scrollbars=no,status=no"
+      );
+    }
+  </script>
 
-<script src="to_do_list.js"></script>
+  <script src="to_do_list.js"></script>
 </body>
 </html>
