--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <ul class="nav-menu">
       <li><a href="index.html" class="nav-link"><span>Home</span></a></li>
       <li><a href="subpages/to_do_list/to_do_list.html" class="nav-link"><span>To-do list</span></a></li>
-      <li><a href="subpages/study/study.html" class="nav-link"><span>Õppimine</span></a></li>
+      <li><a href="subpages/study/study.html" class="nav-link"><span>Study</span></a></li>
 
       <li><a href="#" onclick="openPopup('subpages/Calculator/popup_calculator.html')" class="nav-link"><span>Calculator</span></a></li>
       <li><a href="#" onclick="openPopup('subpages/calendar/calendar.html')" class="nav-link"><span>Calendar</span></a></li>
