--- a/subpages/study/study.html
+++ b/subpages/study/study.html
@@ -30,7 +30,7 @@
     <ul class="nav-menu">
       <li><a href="../../index.html" class="nav-link"><span>Home</span></a></li>
       <li><a href="../to_do_list/to_do_list.html" class="nav-link"><span>To-do list</span></a></li>
-      <li><a href="../study/study.html" class="nav-link"><span>Õppimine</span></a></li>
+      <li><a href="../study/study.html" class="nav-link"><span>Study</span></a></li>
 
       <li>
         <a href="#" onclick="openPopup('../Calculator/popup_calculator.html')" class="nav-link">
