Updated About us

--- a/subpages/about_us/about_us.html
+++ b/subpages/about_us/about_us.html
@@ -59,27 +59,28 @@
         <h2><span class="icon">💡</span> What is Schedulo?</h2>
         <p>
           Schedulo is a simple web planner that combines a to-do list, study tools and small utilities.
-          It is designed to stay lightweight and easy to use.
+          It is designed to stay lightweight and easy to use. The main goal is to help users organize their tasks and learning efficiently in one place.
         </p>
       </article>
 
       <!-- why -->
       <article class="about-card">
-        <h2><span class="icon">🎯</span> Why we built it</h2>
+        <h2><span class="icon">🎯</span> Why we built it?</h2>
         <p>
           This project was created for a web development course at the University of Tartu.
-          Our goal was to practice real front-end development: HTML, CSS, JS and teamwork.
+          Our goal was to practice real front-end development: HTML, CSS, JS and teamwork. 
+          We wanted to build something useful that could help students (including us) manage their time and tasks better.
+          We hope Schedulo can make planning and studying a bit easier for its users! 
         </p>
       </article>
 
       <!-- tech -->
       <article class="about-card">
         <h2><span class="icon">🧰</span> Technologies</h2>
-        <ul class="bullet-list">
-          <li>HTML – structure</li>
-          <li>CSS – layout & visual style</li>
-          <li>JavaScript – logic & interactivity</li>
-        </ul>
+        <p>
+          HTML – structure<br>
+          CSS – layout & visual style<br>
+          JavaScript – logic & interactivity</p>
       </article>
 
       <!-- team -->
